--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -145,7 +145,14 @@ Our first step is to describe the center set for the circle ${\cal C}_2$. Write 
 \]
 \end{question}
 
-Now the center of a third circle tangent to the first two and the $x$-axis must lie on both center sets. Use this information to find the coordinates of the centers of the two possible third circles.
+Now the center of a third circle tangent to the first two and the $x$-axis must lie on both center sets. Use this information to find the coordinates of the centers of the two possible third circles. Input these here (the center with the smaller $x$-coordinate first) and in the desmos activity below.
+\[
+   \left( \answer{\frac{2r_1\sqrt{r_2}}{\sqrt{r_1} -\sqrt{r_2}}} , \answer{\frac{r_1 r_2}{(\sqrt{r_1} -\sqrt{r_2})^2}}  \right) 
+\]
+
+\[
+   \left( \answer{\frac{2r_1\sqrt{r_2}}{\sqrt{r_1} +\sqrt{r_2}}} , \answer{\frac{r_1 r_2}{(\sqrt{r_1} +\sqrt{r_2})^2}}  \right) 
+\]
 
 
 \pdfOnly{
@@ -160,6 +167,68 @@ Access Desmos interactives through the online version of this text at
 \end{center}
 \end{onlineOnly}
 \end{exploration}
+
+
+There is a relationship among the curvatures of four mutually tangent circles in the plane, that
+\[
+    \left( \sum_{i=0}^3 \kappa_i \right)^2 = 2 \sum_{i=0}^3 \kappa_i^2 .     \label{Eq:Q1TangentSpheres}
+\]
+
+Or, as Frederick Soddy wrote in the poem \it{The Kiss Precise}
+
+\pskip
+
+The sum of the squares of all four bends 
+
+Is half the square of their sum
+
+\pskip
+
+We can regard the $x$-axis as our fourth circle with curvature $\kappa_0 = 0$. It looks difficult to verify this relationship even for our two families of mutually tangent circles. The better approach would be to solve the quadratic equation above for $\kappa_3$ to get
+\begin{align*}
+   \kappa_3   &= \kappa_1 + \kappa_2 \pm 2\sqrt{\kappa_1\kappa_2}  \\
+                   &= \frac{r_1 r_2}{(\sqrt{r_1} \pm\sqrt{r_2})^2} ,
+\end{align*}
+as we just saw above.
+
+For a lot more on this see
+
+\href{https://en.wikipedia.org/wiki/Descartes%27_theorem}{Decartes' Theorem}
+
+
+\section{Spheres on a Table}
+We now return to our orginal question about mutually tangent spheres on a table. Given two such spheres, say of radii $r_1$ and $r_2$, we wish to describe the center set of all spheres on the table tangent to these two. 
+
+To get an idea of the dimension of the center set, we can think about degrees of freedom. We have four degrees of freedom in choosing a sphere in space - three for the coordinates of the center and one for the radius. Now our third sphere must meet three conditions - that it be tangent to the first two and the table top. This leaves one degree of freedom and we should expect the center set to be a curve in $\mathbb{R}^3$. What curve?
+
+
+
+\begin{question}    \label{Q23423:Spheres}
+  
+Taking much the same approach as in two-dimensions, we'll start by finding the center set of the sphere with radius $r_1$
+\[
+    x^2 + y^2 + (z-r_1)^2 = r_1^2
+\]
+tangent to the $xy$-plane at the origin. With two degrees of freedom left, we should expect the center set to be a surface. How would you describe this set geometrically?
+ 
+  \begin{selectAll}  
+    \choice{The set of points equidistant from the $xy$-plane and the point $(0,0,r_1)$.}  
+    \choice[correct]{The set of points equidistant from the plane $z=-r_1$ and the point $(0,0,r_1)$.}  
+    \choice{The set of points equidistant from the plane $z=r_1$ and the point $(0,0,r_1)$.}  
+    \choice{The set of points equidistant from the $z$-axis and the point $(0,0,r_1)$.}  
+  \end{selectAll}  
+
+Now translate your geometric description into an equation of the center set.
+\[
+    \answer{4 r_1z  = x^2 + y^2}
+\]
+\end{question}
+
+
+
+
+
+
 
 
 
