--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -218,13 +218,25 @@ tangent to the $xy$-plane at the origin. With two degrees of freedom left, we sh
     \choice{The set of points equidistant from the $z$-axis and the point $(0,0,r_1)$.}  
   \end{selectAll}  
 
-Now translate your geometric description into an equation of the center set.
+\pskip
+
+Now translate your geometric description into an equation of the center set and enter it below.
 \[
     \answer{4 r_1z  = x^2 + y^2}
 \]
 \end{question}
 
-
+\pdfOnly{
+Access Desmos interactives through the online version of this text at
+ 
+\href{https://www.geogebra.org/classic/t9rxbmmt}.
+}
+ 
+\begin{onlineOnly}
+    \begin{center}
+\geogebra{t9rxbmmt}{900}{600}
+\end{center}
+\end{onlineOnly}
 
 
 
