--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -226,8 +226,11 @@ Now translate your geometric description into an equation of the center set and 
 \]
 \end{question}
 
+
+
+
 \pdfOnly{
-Access Desmos interactives through the online version of this text at
+Access Geogebra interactives through the online version of this text at
  
 \href{https://www.geogebra.org/classic/t9rxbmmt}.
 }
@@ -239,6 +242,11 @@ Access Desmos interactives through the online version of this text at
 \end{onlineOnly}
 
 
+\pskip
+ 
+For a Desmos version of a similar animation:
+
+\href{https://www.desmos.com/3d/7fb88aea41}{Mutually Tangent Spheres}
 
 
 
