--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -199,17 +199,17 @@ For a lot more on this see
 \section{Spheres on a Table}
 We now return to our orginal question about mutually tangent spheres on a table. Given two such spheres, say of radii $r_1$ and $r_2$, we wish to describe the center set of all spheres on the table tangent to these two. 
 
-To get an idea of the dimension of the center set, we can think about degrees of freedom. We have four degrees of freedom in choosing a sphere in space - three for the coordinates of the center and one for the radius. Now our third sphere must meet three conditions - that it be tangent to the first two and the table top. This leaves one degree of freedom and we should expect the center set to be a curve in $\mathbb{R}^3$. What curve?
+To get an idea of the dimension of the center set, it helps to think about degrees of freedom. We have four degrees of freedom in choosing a sphere in space - three for the coordinates of the center and one for the radius. Now our third sphere must meet three conditions - that it be tangent to the first two spheres and the table top. This leaves one degree of freedom and we should expect the center set to be a curve in $\mathbb{R}^3$. What curve?
 
 
 
 \begin{question}    \label{Q23423:Spheres}
   
-Taking much the same approach as in two-dimensions, we'll start by finding the center set of the sphere with radius $r_1$
+Taking much the same approach as in two-dimensions, we'll start by finding the center set of the sphere %with radius $r_1$
 \[
-    x^2 + y^2 + (z-r_1)^2 = r_1^2
+      {\cal S_1}:    x^2 + y^2 + (z-r_1)^2 = r_1^2 .
 \]
-tangent to the $xy$-plane at the origin. With two degrees of freedom left, we should expect the center set to be a surface. How would you describe this set geometrically?
+With two degrees of freedom left, we would expect the center-set of spheres tangent to ${\cal S}_1$ and the $xy$-plane to be a surface. How would you describe this set geometrically?
  
   \begin{selectAll}  
     \choice{The set of points equidistant from the $xy$-plane and the point $(0,0,r_1)$.}  
@@ -225,6 +225,23 @@ Now translate your geometric description into an equation of the center set and 
     \answer{4 r_1z  = x^2 + y^2}
 \]
 \end{question}
+
+
+
+
+
+\pdfOnly{
+Access Geogebra interactives through the online version of this text at
+ 
+\href{https://www.geogebra.org/classic/m4zhhshd}.
+}
+ 
+\begin{onlineOnly}
+    \begin{center}
+\geogebra{m4zhhshd}{900}{600}
+\end{center}
+\end{onlineOnly}
+
 
 
 
