--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -207,7 +207,7 @@ To get an idea of the dimension of the center set, it helps to think about degre
   
 Taking much the same approach as in two-dimensions, we'll start by finding the center set of the sphere %with radius $r_1$
 \[
-      {\cal S_1}:    x^2 + y^2 + (z-r_1)^2 = r_1^2 .
+      {\cal S}_1:    x^2 + y^2 + (z-r_1)^2 = r_1^2 .
 \]
 With two degrees of freedom left, we would expect the center-set of spheres tangent to ${\cal S}_1$ and the $xy$-plane to be a surface. How would you describe this set geometrically?
  
@@ -220,9 +220,9 @@ With two degrees of freedom left, we would expect the center-set of spheres tang
 
 \pskip
 
-Now translate your geometric description into an equation of the center set and enter it below.
+Now translate your geometric description into an equation of the center-set (a paraboloid of revolution) and enter it below.
 \[
-    \answer{4 r_1z  = x^2 + y^2}
+   {\cal P}_1:  \answer{4 r_1z  = x^2 + y^2}
 \]
 \end{question}
 
@@ -242,6 +242,18 @@ Access Geogebra interactives through the online version of this text at
 \end{center}
 \end{onlineOnly}
 
+\begin{question}  \label{Q365434:Spheres}
+Now let's add a second sphere of radius $r_2$, tangent to ${\cal S}_1$ and the $xy$-plane. To simplify matters, we'll make this sphere tangent to the positve $x$-axis. It's equation is much like the second circle ${\cal C}_2$ we added in the plane. Enter an equation of this second sphere below.
+\[
+   {\cal S}_2: \answer{(x-2\sqrt{r_1r_2})^2 + y^2 + (z-r_2)^2 = r_2^2}
+\]
+
+Next write an equation of the center-set for the spheres tangent to ${\cal S}_2$ and the $xy$-plane in the line below.
+\[
+   {\cal P}_2:  \answer{4r_2z = (x-2\sqrt{r_1r_2})^2 + y^2}
+\]
+
+\end{question}
 
 
 
