--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -126,7 +126,7 @@ The center set looks like it vanishes when $r_1=0$. But this is not correct. Thi
 \end{exploration}
 
 
-\begin{exploration}
+\begin{exploration}   \label{Ex2434634:Spheres}
 Now let's fix the circle from the last exercise, the one centered in first quadrant, and let it have radius $r_2$ instead of $r$. Then we have two fixed circles
 \[
    {\cal C}_1: x^2 + y^2 = r_1^2
@@ -163,7 +163,7 @@ Access Desmos interactives through the online version of this text at
  
 \begin{onlineOnly}
     \begin{center}
-\desmos{j96fr7drbv}{900}{600}
+\desmos{grf1kxmlem}{900}{600}
 \end{center}
 \end{onlineOnly}
 \end{exploration}
@@ -227,7 +227,29 @@ Now translate your geometric description into an equation of the center-set (a p
 \end{question}
 
 
+\begin{question}  \label{Q365434:Spheres}
+Now let's add a second sphere of radius $r_2$, tangent to ${\cal S}_1$ and the $xy$-plane. To simplify matters, we'll make this sphere tangent to $xy$-plane on the positive $x$-axis. Its equation is much like the second circle ${\cal C}_2$ we added in the plane. Enter an equation of this second sphere below.
+\[
+   {\cal S}_2: \answer{(x-2\sqrt{r_1r_2})^2 + y^2 + (z-r_2)^2 = r_2^2}
+\]
 
+Next write an equation of the center-set for the spheres tangent to ${\cal S}_2$ and the $xy$-plane in the line below.
+\[
+   {\cal P}_2:  \answer{4r_2z = (x-2\sqrt{r_1r_2})^2 + y^2}
+\]
+
+\end{question}
+
+
+\begin{exploration}  
+We know now that the center of a sphere tangent to the $xy$-plane and the spheres ${\cal S}_1$, ${\cal S}_2$ lies on the paraboloids of revolution
+\[
+   {\cal P}_1:  \answer{4 r_1z  = x^2 + y^2}
+\]
+and 
+\[
+     {\cal P}_2:  \answer{4r_2z = (x-2\sqrt{r_1r_2})^2 + y^2} .
+\]
 
 
 \pdfOnly{
@@ -242,21 +264,8 @@ Access Geogebra interactives through the online version of this text at
 \end{center}
 \end{onlineOnly}
 
-\begin{question}  \label{Q365434:Spheres}
-Now let's add a second sphere of radius $r_2$, tangent to ${\cal S}_1$ and the $xy$-plane. To simplify matters, we'll make this sphere tangent to the positve $x$-axis. It's equation is much like the second circle ${\cal C}_2$ we added in the plane. Enter an equation of this second sphere below.
-\[
-   {\cal S}_2: \answer{(x-2\sqrt{r_1r_2})^2 + y^2 + (z-r_2)^2 = r_2^2}
-\]
 
-Next write an equation of the center-set for the spheres tangent to ${\cal S}_2$ and the $xy$-plane in the line below.
-\[
-   {\cal P}_2:  \answer{4r_2z = (x-2\sqrt{r_1r_2})^2 + y^2}
-\]
-
-\end{question}
-
-
-
+\end{exploration}
 
 \pdfOnly{
 Access Geogebra interactives through the online version of this text at
