--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -244,13 +244,14 @@ Next write an equation of the center-set for the spheres tangent to ${\cal S}_2$
 \begin{exploration}  
 We know now that the center of a sphere tangent to the $xy$-plane and the spheres ${\cal S}_1$, ${\cal S}_2$ lies on the paraboloids of revolution
 \[
-   {\cal P}_1:  \answer{4 r_1z  = x^2 + y^2}
+   {\cal P}_1:  4 r_1z  = x^2 + y^2
 \]
 and 
 \[
-     {\cal P}_2:  \answer{4r_2z = (x-2\sqrt{r_1r_2})^2 + y^2} .
+     {\cal P}_2:  4r_2z = (x-2\sqrt{r_1r_2})^2 + y^2 .
 \]
 
+So the center-set of spheres tangent to the $xy$-plane, ${\cal S}_1$ and ${\cal S}_2$ is the curve in which these paraboloids intersect. You might pause here and try to visualize this curve.
 
 \pdfOnly{
 Access Geogebra interactives through the online version of this text at
