--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -17,7 +17,7 @@ Some other questions to ponder. Is there a smallest sphere tangent to the origin
 
 Can you guess what the center set might look like? Or what about the set of \emph{tangency points}, where the variable spheres are tangent to the table top?
 
-We'll put these questions aside for now and get a feel for these questions by thinking about an analogous problem in two dimensions.
+We'll put these questions aside for now and get a feel for them by thinking about an analogous problem in two dimensions.
 
 \section{Circles on a Line}
 \begin{exploration}
@@ -267,12 +267,12 @@ Now translate your geometric description into an equation of the center-set (a p
 
 
 \begin{question}  \label{Q365434:Spheres}
-Now let's add a second sphere of radius $r_2$, tangent to ${\cal S}_1$ and the $xy$-plane. To simplify matters, we'll make this sphere tangent to $xy$-plane on the positive $x$-axis. Its equation is much like the second circle ${\cal C}_2$ we added in the plane. Enter an equation of this second sphere below.
+Now let's add a second sphere of radius $r_2$, tangent to ${\cal S}_1$ and the $xy$-plane. To simplify matters, we'll make this sphere tangent to $xy$-plane on the positive $x$-axis. Its equation is much like that of the second circle ${\cal C}_2$ in the plane. Enter an equation of this second sphere below.
 \[
    {\cal S}_2: \answer{(x-2\sqrt{r_1r_2})^2 + y^2 + (z-r_2)^2 = r_2^2}
 \]
 
-Next write an equation of the center-set for the spheres tangent to ${\cal S}_2$ and the $xy$-plane in the line below.
+Next write an equation of the center-set for the spheres tangent to ${\cal S}_2$ and the $xy$-plane.
 \[
    {\cal P}_2:  \answer{4r_2z = (x-2\sqrt{r_1r_2})^2 + y^2}
 \]
@@ -280,8 +280,8 @@ Next write an equation of the center-set for the spheres tangent to ${\cal S}_2$
 \end{question}
 
 
-\begin{exploration}  
-We know now that the center of a sphere tangent to the $xy$-plane and the spheres ${\cal S}_1$, ${\cal S}_2$ lies on the paraboloids of revolution
+
+We know now that the center-set of the spheres tangent to the $xy$-plane and the spheres ${\cal S}_1$, ${\cal S}_2$ are exaclty those points that lie on the paraboloids of revolution
 \[
    {\cal P}_1:  4 r_1z  = x^2 + y^2
 \]
@@ -290,7 +290,15 @@ and
      {\cal P}_2:  4r_2z = (x-2\sqrt{r_1r_2})^2 + y^2 .
 \]
 
-So the center-set of spheres tangent to the $xy$-plane, ${\cal S}_1$ and ${\cal S}_2$ is the curve in which these paraboloids intersect. You might pause here and try to visualize this curve.
+So the center-set is the curve in which these paraboloids intersect. You might pause here and try to visualize this curve.
+
+
+\begin{exploration}  \label{Exsdsdfsdf:Spheres}
+Experiment with the sliders below and watch how the center-set changes. 
+
+(a) Make a conjecture about the center-set.
+
+(b) Make a conjecture about the tangent-set (the set of points where the spheres are tangent to the $xy$-plane).
 
 \pdfOnly{
 Access Geogebra interactives through the online version of this text at
@@ -307,6 +315,28 @@ Access Geogebra interactives through the online version of this text at
 
 \end{exploration}
 
+
+\begin{question} \label{Q5r43rd:Spheres}
+
+Our next step is to give precise descriptions of the center and tangent sets. It would be nice to do this geometrically, but I don't know how. So instead, we'll continue with our algebraic approach.
+
+(a) Using the equations of the two paraboloids above, eliminate the variable $y$ to get a relation between $x$ and $z$. Write this relation below in a simplfied form that you can recognize and that works even if $r_1 = r_2$.
+
+\[
+    \answer{\sqrt{r_1 r_2}x + (r_2 - r_1) z = r_1 r_2}
+\]
+
+(b) Now find a relationship between the variables $x$ and $y$ by using your equation from part (a) and the equation of the paraboloid ${\cal P}_1$. At this point it's probably best not to do too much algebra. Instead write the relation in the form 
+\[
+   ax^2 - bx + cy^2 = e 
+\]
+and enter it below.
+\[
+    \answer{(r_1 - r_2)x^2 - 4 r_1\sqrt{r_1r_2}x + (r_1-r_2)y^2 = - 4r_1^2 r_2}
+\]
+
+
+
 \pdfOnly{
 Access Geogebra interactives through the online version of this text at
  
@@ -318,6 +348,9 @@ Access Geogebra interactives through the online version of this text at
 \geogebra{t9rxbmmt}{900}{600}
 \end{center}
 \end{onlineOnly}
+
+
+\end{question}
 
 
 \pskip
