--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -332,8 +332,16 @@ Our next step is to give precise descriptions of the center and tangent sets. It
 \]
 and enter it below.
 \[
-    \answer{(r_1 - r_2)x^2 - 4 r_1\sqrt{r_1r_2}x + (r_1-r_2)y^2 = - 4r_1^2 r_2}
+    \answer{(r_1 - r_2)x^2 + 4 r_1\sqrt{r_1r_2}x + (r_1-r_2)y^2 = - 4r_1^2 r_2}
 \]
+
+(c) What can you conclude from the two equations above if $r_1\neq r_2$? Check all that apply.
+ \begin{selectAll}  
+    \choice[correct]{The tangent set is a circle.}  
+    \choice[correct]{The center-set lies on a plane parallel to the $y$-axis.}  
+    \choice[correct]{The center-set lies on circular cylinder with generating lines parallel to the $z$-axis.} 
+    \choice[correct]{The center-set is an ellipse.}  
+  \end{selectAll}  
 
 
 
