--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -328,7 +328,7 @@ Our next step is to give precise descriptions of the center and tangent sets. It
 
 (b) Now find a relationship between the variables $x$ and $y$ by using your equation from part (a) and the equation of the paraboloid ${\cal P}_1$. At this point it's probably best not to do too much algebra. Instead write the relation in the form 
 \[
-   ax^2 - bx + cy^2 = e 
+   ax^2 + bx + cy^2 = e 
 \]
 and enter it below.
 \[
@@ -342,6 +342,15 @@ and enter it below.
     \choice[correct]{The center-set lies on circular cylinder with generating lines parallel to the $z$-axis.} 
     \choice[correct]{The center-set is an ellipse.}  
   \end{selectAll}  
+
+(d) What can you conclude from the two equations above if $r_1= r_2$? Check all that apply.
+ \begin{selectAll}  
+    \choice[correct]{The tangent-set is a line.}  
+    \choice[correct]{The tangent-set lies on the plane $x = \sqrt{r_1r_2}$.}  
+    \choice{The center-set lies on circular cylinder with generating lines parallel to the $z$-axis.} 
+    \choice{The center-set is an ellipse.}  
+     \choice[correct]{The center-set is a parabola.} 
+  \end{selectAll}
 
 
 
