--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -15,17 +15,19 @@ What can we say about the set of centers, what we'll call the \emph{center set} 
 
 Some other questions to ponder. Is there a smallest sphere tangent to the original two? A largest? Is the center set bounded or not?
 
-Can you guess what the center set might look like? Or what about the set of \emph{tangency points}, where the variable spheres are tangent to the table top?
+Can you guess what the center set might look like? Or what about the \emph{tangent-set}, those points where the variable spheres are tangent to the table top?
 
-We'll put these questions aside for now and get a feel for them by thinking about an analogous problem in two dimensions.
+%We'll put these questions aside for now and get a feel for them by thinking about an analogous problem in two dimensions.
+
+We'll set these questions aside for now and first think about a similar question in the plane.
 
 \section{Circles on a Line}
 \begin{exploration}
 Let's replace the table with a line, say the $x$-axis, and the two original spheres with just one circle ${\cal C}_1$ tangent to the $x$-axis. What can we say about the center set of all circles tangent to the $x$-axis and ${\cal C}_1$?
 
-One little point before we get started. We really require that the variable circle be externally tangent to ${\cal C}_1$ (can you see why) and we assume this troughout.
+One point before we get started. We really require that the variable circle be externally tangent to ${\cal C}_1$ (can you see why) and we assume this throughout.
 
-To explore this question, drag either the centers or the points of tangency of the circles below to make them tangent to the circle $x^2 + (y-1)^2=1$.
+To explore this question, drag the centers of the circles below to make them tangent to the unit circle $x^2 + (y-1)^2=1$.
 
 Do  you have a guess about what the center set might be?
 
@@ -45,7 +47,9 @@ Access Geogebra interactives through the online version of this text at
 
 
 \begin{exploration}
-To verify your guess, let's first find a geometric description of the center set for circles tangent to both the $x$-axis and the circle ${\cal C}_1$ with radius $r_1$ centered at $A(0,r_1)$.
+To check your guess, we'll replace the unit circle with a circle ${\cal C}_1$ with radius $r_1$ and centered at $A(0,r_1)$. What is the center-set of the circles  tangent to the $x$-axis and ${\cal C}_1$?
+
+ %let's first find a geometric description of the center set for circles tangent to both the $x$-axis and the circle ${\cal C}_1$ with radius $r_1$ centered at $A(0,r_1)$.
 
 
 \begin{question}  \label{Q243:Spheres}
@@ -86,7 +90,7 @@ Our next step is to turn one of the geoemtric descriptions above (take your pick
 \end{question}
 
 
-Next use your equation of the center set to find equations of all circle with radius $r$  tangent to both the $x$-axis and ${\cal C}_1$. Enter these below.
+Next use your equation of the center set to find equations of the two circles with radius $r>0$  tangent to both the $x$-axis and ${\cal C}_1$. Enter these below.
 
 \begin{question} \label{Q4541:Spheres}
 An equation of the circle centered in the first quadrant is
@@ -99,7 +103,7 @@ An equation of the circle centered in the second quadrant is
 \]
 \end{question}
 
-Finally, follow the directions in the desmos activity below. Be sure to drag the siders to check that your variable circles behave as they should.
+Finally, follow the directions in the desmos activity below. Be sure to drag the siders to check that your variable circles stay tangent to ${\cal C}_1$ and the $x$-axis.
 
 
 \pdfOnly{
@@ -127,7 +131,7 @@ The center set looks like it vanishes when $r_1=0$. But this is not correct. Thi
 
 
 \begin{exploration}   \label{Ex2434634:Spheres}
-Now let's fix the circle from the last exercise, the one centered in first quadrant, and let it have radius $r_2$ instead of $r$. Then we have two fixed circles
+Now let's fix one of the variable circles from the last exercise, the one centered in first quadrant, and let it have radius $r_2$ instead of $r$. Then we have two fixed circles
 \[
    {\cal C}_1: x^2 + y^2 = r_1^2
 \]
@@ -135,7 +139,7 @@ and
 \[
   {\cal C}_2:  (x-2\sqrt{r_1r_2})^2 + (y-r_2)^2 = r_2^2
 \]
-tangent to the $x$-axis and to each other. Our problem now is to find equations of all circles tangent to the $x$-axis and these two fixed circles. How many of these circle do you think there are?
+tangent to the $x$-axis and to each other. Our problem now is to find equations of all circles tangent to the $x$-axis, ${\cal C}_1$ and ${\cal C}_2$. How many of these circle do you think there are?
 
 
 \begin{question}   \label{Q5693:Spheres}
