--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -139,15 +139,15 @@ and
 \[
   {\cal C}_2:  (x-2\sqrt{r_1r_2})^2 + (y-r_2)^2 = r_2^2
 \]
-tangent to the $x$-axis and to each other. Our problem now is to find equations of all circles tangent to the $x$-axis, ${\cal C}_1$ and ${\cal C}_2$. How many of these circle do you think there are?
+tangent to the $x$-axis and to each other. Our problem now is to find equations of all circles tangent to the $x$-axis, ${\cal C}_1$ and ${\cal C}_2$. How many of these circles do you think there are?
 
 
-\begin{question}   \label{Q5693:Spheres}
-Our first step is to describe the center set for the circle ${\cal C}_2$. Write an equation for this parabola below. You might be able to guess an equation based our previous work. If not, describe the set geometrically and then translate this description into an equation. 
+%\begin{question}   \label{Q5693:Spheres}
+Our first step is to describe the center set for the circle ${\cal C}_2$. Write an equation for this set below. You might be able to guess an equation based our previous work. If not, describe the set geometrically and then translate this description into an equation. 
 \[
     \answer{y=\frac{(x-2\sqrt{r_1r_2})^2}{4r_2}}
 \]
-\end{question}
+%\end{question}
 
 Now the center of a third circle tangent to the first two and the $x$-axis must lie on both center sets. Use this information to find the coordinates of the centers of the two possible third circles. Input these here (the center with the smaller $x$-coordinate first) and in the desmos activity below.
 \[
