--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -149,7 +149,7 @@ Our first step is to describe the center set for the circle ${\cal C}_2$. Write 
 \]
 %\end{question}
 
-Now the center of a third circle tangent to the first two and the $x$-axis must lie on both center sets. Use this information to find the coordinates of the centers of the two possible third circles. Input these here (the center with the smaller $x$-coordinate first) and in the desmos activity below.
+Now the center of a third circle tangent to the first two and the $x$-axis must lie on both center sets. Use this information to find the coordinates of the centers of the two possible circles. Input these here (the center with the smaller $x$-coordinate first) and in the desmos activity below.
 \[
    \left( \answer{\frac{2r_1\sqrt{r_2}}{\sqrt{r_1} -\sqrt{r_2}}} , \answer{\frac{r_1 r_2}{(\sqrt{r_1} -\sqrt{r_2})^2}}  \right) 
 \]
@@ -212,7 +212,7 @@ The $y$-coordinates of these centers give the respective radii.
 What happens if $r_1=r_2$?
 \end{question}
 
-One final point. There is a relationship among the curvatures of four mutually tangent circles in the plane, namely that
+One final point. There is a relationship among the curvatures $\kappa_i$ of four mutually tangent circles in the plane, namely that
 \[
     \left( \sum_{i=0}^3 \kappa_i \right)^2 = 2 \sum_{i=0}^3 \kappa_i^2 .     \label{Eq:Q1TangentSpheres}
 \]
@@ -227,7 +227,7 @@ One final point. There is a relationship among the curvatures of four mutually t
 
 %\pskip
 
-We can regard the $x$-axis as our fourth circle with curvature $\kappa_0 = 0$. It looks difficult to verify this relationship for our two families of mutually tangent circles. The easier approach would be to solve the quadratic equation above for $\kappa_3$ to get
+As a special case, we can regard the $x$-axis as our fourth circle with curvature $\kappa_0 = 0$. We can verify this curvature relationship for each of our two families of four mutually tangent circles by solving the quadratic equation above for $\kappa_3$. The result is that
 \begin{align*}
    \kappa_3   &= \kappa_1 + \kappa_2 \pm 2\sqrt{\kappa_1\kappa_2}  \\
                    &= \frac{r_1 r_2}{(\sqrt{r_1} \pm\sqrt{r_2})^2} ,
@@ -242,7 +242,7 @@ For a lot more on this see
 \section{Spheres on a Table}
 We now return to our orginal question about mutually tangent spheres on a table. Given two such spheres, say of radii $r_1$ and $r_2$, we wish to describe the center set of all spheres on the table tangent to these two. 
 
-To get an idea of the dimension of the center set, it helps to think about degrees of freedom. We have four degrees of freedom in choosing a sphere in space - three for the coordinates of the center and one for the radius. Now our third sphere must meet three conditions - that it be tangent to the first two spheres and the table top. This leaves one degree of freedom and we should expect the center set to be a curve in $\mathbb{R}^3$. What curve?
+To get an idea of the dimension of the center set, it helps to think about degrees of freedom. We have four degrees of freedom in choosing a sphere in space - three for the coordinates of the center and one for the radius. Now our third sphere must meet three conditions - that it be tangent to the first two spheres and to the table top. This leaves one degree of freedom and we should expect the center set to be a curve in $\mathbb{R}^3$. What curve?
 
 
 
@@ -263,7 +263,7 @@ With two degrees of freedom left, we would expect the center-set of spheres tang
 
 \pskip
 
-Now translate your geometric description into an equation of the center-set (a paraboloid of revolution) and enter it below.
+Translate your geometric description into an equation of the center-set (a paraboloid of revolution) and enter it below.
 \[
    {\cal P}_1:  \answer{4 r_1z  = x^2 + y^2}
 \]
@@ -271,7 +271,7 @@ Now translate your geometric description into an equation of the center-set (a p
 
 
 \begin{question}  \label{Q365434:Spheres}
-Now let's add a second sphere of radius $r_2$, tangent to ${\cal S}_1$ and the $xy$-plane. To simplify matters, we'll make this sphere tangent to $xy$-plane on the positive $x$-axis. Its equation is much like that of the second circle ${\cal C}_2$ in the plane. Enter an equation of this second sphere below.
+Let's add a second sphere of radius $r_2$, tangent to ${\cal S}_1$ and the $xy$-plane. To simplify matters, we'll make this sphere tangent to $xy$-plane at a point on the positive $x$-axis. Its equation is much like that of the second circle ${\cal C}_2$ in the plane. Enter an equation of this second sphere below.
 \[
    {\cal S}_2: \answer{(x-2\sqrt{r_1r_2})^2 + y^2 + (z-r_2)^2 = r_2^2}
 \]
@@ -285,7 +285,7 @@ Next write an equation of the center-set for the spheres tangent to ${\cal S}_2$
 
 
 
-We know now that the center-set of the spheres tangent to the $xy$-plane and the spheres ${\cal S}_1$, ${\cal S}_2$ are exaclty those points that lie on the paraboloids of revolution
+We know now that the center-set of spheres tangent to the $xy$-plane and the spheres ${\cal S}_1$, ${\cal S}_2$ is the set of points on both the paraboloids of revolution
 \[
    {\cal P}_1:  4 r_1z  = x^2 + y^2
 \]
@@ -294,7 +294,7 @@ and
      {\cal P}_2:  4r_2z = (x-2\sqrt{r_1r_2})^2 + y^2 .
 \]
 
-So the center-set is the curve in which these paraboloids intersect. You might pause here and try to visualize this curve.
+This makes the center-set the curve in which these paraboloids intersect. It seemed to me that the paraboloids, being unbounded, would intersect in an unbounded curve. But you might pause here and try to visualize this curve for yourself.
 
 
 \begin{exploration}  \label{Exsdsdfsdf:Spheres}
@@ -341,19 +341,19 @@ and enter it below.
 
 (c) What can you conclude from the two equations above if $r_1\neq r_2$? Check all that apply.
  \begin{selectAll}  
-    \choice[correct]{The tangent set is a circle.}  
-    \choice[correct]{The center-set lies on a plane parallel to the $y$-axis.}  
-    \choice[correct]{The center-set lies on circular cylinder with generating lines parallel to the $z$-axis.} 
-    \choice[correct]{The center-set is an ellipse.}  
+        \choice[correct]{The center set lies on a plane parallel to the $y$-axis.}  
+    \choice[correct]{The center set lies on circular cylinder with generating lines parallel to the $z$-axis.} 
+    \choice[correct]{The tangent set is a circle.}    
+    \choice[correct]{The center set is an ellipse.}  
   \end{selectAll}  
 
 (d) What can you conclude from the two equations above if $r_1= r_2$? Check all that apply.
  \begin{selectAll}  
-    \choice[correct]{The tangent-set is a line.}  
-    \choice[correct]{The tangent-set lies on the plane $x = \sqrt{r_1r_2}$.}  
-    \choice{The center-set lies on circular cylinder with generating lines parallel to the $z$-axis.} 
-    \choice{The center-set is an ellipse.}  
-     \choice[correct]{The center-set is a parabola.} 
+    \choice[correct]{The tangent set is a line.}  
+    \choice[correct]{The tangent set lies on the plane $x = \sqrt{r_1r_2}$.}  
+    \choice{The center set lies on circular cylinder symmetric about a line parallel to the $z$-axis.} 
+    \choice{The center set is an ellipse.}  
+     \choice[correct]{The center set is a parabola.} 
   \end{selectAll}
 
 
