--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -387,16 +387,16 @@ To summarize what we know so far:
 
 \item{The center set is the curve where the plane
 \[
-    \sqrt{r_1 r_2}x + (r_2 - r_1) z = r_1 r_2
+   \Pi:  \sqrt{r_1 r_2}x + (r_2 - r_1) z = r_1 r_2
 \]
 intersects the paraboloid
 \[
-   4r_1z = x^2 + y^2 .
+  {\cal P}_1:  4r_1z = x^2 + y^2 .
 \]
-It is an ellipse if $r_1\neq r_2$ and otherwise a parabola.
+It is an ellipse if $r_1\neq r_2$ and a parabola otherwise.
 }
 
-\item{The center set is also the curve where the plane above intersect the surface
+\item{The center set is also the curve where the above plane intersects the surface
 \[
        (r_2 - r_1)x^2 + 4 r_1\sqrt{r_1r_2}x + (r_2-r_1)y^2 =  4r_1^2 r_2 .
 \]
@@ -416,7 +416,7 @@ centered at
    \left( \frac{2r_1 \sqrt{r_1r_2}}{r_1-r_2} , 0   \right) .
 \]
 
-We'll take a simpler approach and parametrize the center set by the radius $r$ of the variable sphere. This has the advantage of working when $r_1=r_2$, but the disadvantage of needing to split the parameterization into two parts (since there are usually two variable spheres, symmetric about the $xz$-plane, with a given radius).
+We'll take a simpler approach and parameterize the center set by the radius $r$ of the variable sphere. This has the advantage of working when $r_1=r_2$, but the disadvantage of needing to split the parameterization into two parts (since there are usually two variable spheres, symmetric about the $xz$-plane, with a given radius).
 
 
 
