--- a/TangentSpheres/TangentSpheres.tex
+++ b/TangentSpheres/TangentSpheres.tex
@@ -427,6 +427,33 @@ centered at
 
 But we'll take a simpler approach and parameterize the center set by the radius $r$ of the variable sphere. This has the advantage of working when $r_1=r_2$, but the disadvantage of needing two parameterizations (since except for the smallest and largest, there are two spheres, symmetric about the $xz$-plane, with a given radius).
 
+For this, we can just let $z=r$ in the equation of the plane
+\[
+ \Pi:  \sqrt{r_1 r_2}x + (r_2 - r_1) z = r_1 r_2
+\]
+and solve for $x$ to get
+\[
+    x = \frac{r_1r_2 +(r_1-r_2)r}{\sqrt{r_1r_2}} .
+\]
+Then substituting $z=r$ and the above expression for $x$ in the equation
+\[
+  {\cal P}_1:  4r_1z = x^2 + y^2 .
+\]
+of the paraboloid and solving for $y$ gives
+\[
+         y = \pm \sqrt{4r_1r - \left( \frac{r_1r_2 +(r_1-r_2)r}{\sqrt{r_1r_2}} \right)^2} .
+\]
+
+\begin{question}  \label{Qgt4667:Spheres}
+
+Find the domain of this paramerization of the center set when $r_1\neq r_2$. 
+\[
+           r \in \left[ \answer{\frac{r_1 r_2}{\left(\sqrt{r_1}+\sqrt{r_2}\right)^2}} ,    \answer{\frac{r_1 r_2}{\left(\sqrt{r_1}-\sqrt{r_2}\right)^2}} \right]                 
+\]  
+
+\end{question}
+
+The animation below shows the variable third sphere and suggests that the tangent sets left behind on the two fixed spheres are circles. Are they? If so, what are their radii?
 
 
 
