--- a/ThirdActivity/ThirdActivity.tex
+++ b/ThirdActivity/ThirdActivity.tex
@@ -48,6 +48,8 @@ Access Desmos interactives through the online version of this text at
 \end{onlineOnly}
 
 
+The focus of this note, however, is about their analysis of the depletion of the world's chromium reserves as illustrated in the figure below. %This model might be turned into a meaningful project for a Math 152 class.
+
 
 \pdfOnly{
 Access Desmos interactives through the online version of this text at
@@ -60,6 +62,42 @@ Access Desmos interactives through the online version of this text at
 \desmos{9kqmbczco7}{900}{600}
 \end{center}
 \end{onlineOnly}
+
+\pskip \pskip
+
+Chromium is just one of 19 non-renewable natural resources that they analyze. For each, the authors provide the following information.
+
+\begin{itemize}
+\item{The known global reserves in 1970; for chromium $7.75\times 10^8$ tons}
+
+\item{The static index. This is the number of years it the global reserves would last at the current global consumption rate.}
+
+\item{The projected rate of growth in the global consumption rate. For chromium, the nominal rate is $2.6\%$/yr, compounded continuously.}
+
+\end{itemize}
+
+For each resource, the authors compute the \emph{exponential index}. This is the number of years the known current reserves would last with consumption growing exponentially at the average rate of growth. They also compute the exponential index using five times the known reserves. 
+
+\begin{question}   \label{Q34fratr5}
+Let's work in general (like the authors) and let $r$ be the nominal annual growth rate in the global consumption rate and let $s$ be the static index. Our goal is to express  the exponential index in terms of $r$ and $s$.  
+
+\pskip 
+
+(a) We'll start by computing the usage rate function (see the graph above)
+\[
+     u = f(t) , 0\leq t \leq 2230,
+\]
+that expresses the usage rate (measured in $10^8$ tons/year) in terms of the number of years since 1970. We'll do this in general. letting $R$ be the 1970 global reserves (measured in units of $10^8$ tons). Try this on your own first and input your expression in the box below. Otherwise, click the Hint button for some help.
+\[
+   u = f(t) = \left( \answer{\frac{R}{rs}} \right) (e^{\answer{rt}} - \answer{1}) , 0\leq t \leq 2230 .
+\]
+
+
+
+
+\end{question}
+
+
 
 
 
