--- a/ThirdActivity/ThirdActivity.tex
+++ b/ThirdActivity/ThirdActivity.tex
@@ -65,14 +65,14 @@ Access Desmos interactives through the online version of this text at
 
 \pskip \pskip
 
-Chromium is just one of 19 non-renewable natural resources that they analyze. For each, the authors provide the following information.
+Chromium is just one of 19 non-renewable natural resources analyzed. For each, the authors provide the following information.
 
 \begin{itemize}
 \item{The known global reserves in 1970; for chromium $7.75\times 10^8$ tons}
 
-\item{The static index. This is the number of years it the global reserves would last at the current global consumption rate.}
+\item{The static index. This is the number of years it the global reserves would last at the current global consumption rate. The static index for chromium is $420$ years.}
 
-\item{The projected rate of growth in the global consumption rate. For chromium, the nominal rate is $2.6\%$/yr, compounded continuously.}
+\item{The projected rate of growth in the global consumption rate. For chromium, the nominal growth rate is $2.6\%$/yr, compounded continuously.}
 
 \end{itemize}
 
@@ -85,12 +85,28 @@ Let's work in general (like the authors) and let $r$ be the nominal annual growt
 
 (a) We'll start by computing the usage rate function (see the graph above)
 \[
-     u = f(t) , 0\leq t \leq 2230,
+     u = f(t) , 0\leq t \leq 240,
 \]
-that expresses the usage rate (measured in $10^8$ tons/year) in terms of the number of years since 1970. We'll do this in general. letting $R$ be the 1970 global reserves (measured in units of $10^8$ tons). Try this on your own first and input your expression in the box below. Otherwise, click the Hint button for some help.
+that expresses the usage rate (measured in $10^8$ tons/year) in terms of the number of years since 1970. We'll do this in general letting $R$ be the 1970 global reserves (measured in units of $10^8$ tons). Try this on your own first and input your expression (in terms of $R$, $r$, and $s$) for the function below. Otherwise, click the Hint button for some help.
 \[
-   u = f(t) = \left( \answer{\frac{R}{rs}} \right) (e^{\answer{rt}} - \answer{1}) , 0\leq t \leq 2230 .
+   u = f(t) = \left( \answer{\frac{R}{rs}} \right) (e^{\answer{rt}} - \answer{1}) , 0\leq t \leq 240 .
 \]
+
+(b) Check that your expression for the usage rate function in part (a) has the correct units.
+
+
+
+\pdfOnly{
+Access Desmos interactives through the online version of this text at
+ 
+\href{https://www.desmos.com/calculator/rebewuu1f5}.
+}
+ 
+\begin{onlineOnly}
+    \begin{center}
+\desmos{rebewuu1f5}{900}{600}
+\end{center}
+\end{onlineOnly}
 
 
 
