--- a/ThirdActivity/ThirdActivity.tex
+++ b/ThirdActivity/ThirdActivity.tex
@@ -54,14 +54,18 @@ The focus of this note, however, is about their analysis of the depletion of the
 \pdfOnly{
 Access Desmos interactives through the online version of this text at
  
-\href{https://www.desmos.com/calculator/9kqmbczco7}.
+\href{https://www.desmos.com/calculator/kv244mputa}.
 }
  
 \begin{onlineOnly}
     \begin{center}
-\desmos{9kqmbczco7}{900}{600}
+\desmos{kv244mputa}{900}{600}
 \end{center}
 \end{onlineOnly}
+
+Access this worksheet at
+
+\href{https://www.desmos.com/calculator/kv244mputa}{Limits to Growth 2}
 
 \pskip \pskip
 
@@ -79,9 +83,46 @@ Chromium is just one of 19 non-renewable natural resources analyzed. For each, t
 For each resource, the authors compute the \emph{exponential index}. This is the number of years the known current reserves would last with consumption growing exponentially at the average rate of growth. They also compute the exponential index using five times the known reserves. 
 
 \begin{question}   \label{Q34fratr5}
-Let's work in general (like the authors) and let $r$ be the nominal annual growth rate in the global consumption rate and let $s$ be the static index. Our goal is to express  the exponential index in terms of $r$ and $s$.  
+Let's work in general (like the authors) and let $r$ be the nominal annual growth rate (compounded continuously) in the global consumption rate and let $s$ be the static index. One of our goals is to express  the exponential index in terms of $r$ and $s$.  
+But more broadly, our aim is to reproduce the graphs in Figure 11 (Chromium Reserves) above. 
+
+%The figure shows the graphs of five functions. The first is the constant function $R=R_0$
+
+
+We'll let $R_0$ be the 1970 known global reserves (in units of hundreds of millions of tons). Use this parameter along with the parameters $r$ and $s$ as need be, to find expressions for each of the five functions graphed in the figure above:
 
 \pskip 
+
+(a) The function 
+\[
+   R = L(t), 0\leq t \leq 240,
+\]
+that expresses the remaining global reserves (in hundreds of millions of tons) in terms of the number of years since 1970, assuming a constant usage rate equal to the 1970 rate.
+
+(b) The constant function $R=R_0$.
+
+(c) The usage rate function 
+\[
+     u = f(t) , 0\leq t \leq 240,
+\]
+that expresses the usage rate (measured in $10^8$ tons/year) in terms of the number of years since 1970. Recall the assumption that the usage rate increases exponentially at the annual nominal rate of $r \text{ yr}^{-1}$, compounded continuously.
+
+The graph of this function does not really belong on the same coordinate system as the others. Why not?
+
+(d) The remaining reserves function
+\[
+    R = g(t) , 0\leq t \leq 240,
+\]
+that expresses the remaining global reserves (in hundreds of millions of tons) in terms of the number of years since 1970, assuming an exponentially increasing usage rate of $r \text{ yr}^{-1}$, compounded continuously.
+
+(e) The remaining reserves function
+\[
+    R = h(t) , 0\leq t \leq 240,
+\]
+that expresses the remaining global reserves (in hundreds of millions of tons) in terms of the number of years since 1970, assuming an exponentially increasing usage rate of $r \text{ yr}^{-1}$, compounded continuously and an initial reserve equal to five times the 1970 reserve.
+
+
+
 
 (a) We'll start by computing the usage rate function (see the graph above)
 \[
