--- a/ThirdActivity/ThirdActivity.tex
+++ b/ThirdActivity/ThirdActivity.tex
@@ -50,20 +50,19 @@ Access Desmos interactives through the online version of this text at
 
 The focus of this note, however, is about their analysis of the depletion of the world's chromium reserves as illustrated in the figure below. %This model might be turned into a meaningful project for a Math 152 class.
 
-
 \pdfOnly{
 Access Desmos interactives through the online version of this text at
  
-\href{https://www.desmos.com/calculator/kv244mputa}.
+\href{https://www.desmos.com/calculator/9kqmbczco7}.
 }
  
 \begin{onlineOnly}
     \begin{center}
-\desmos{kv244mputa}{900}{600}
+\desmos{9kqmbczco7}{900}{600}
 \end{center}
 \end{onlineOnly}
 
-Access this worksheet at
+
 
 \href{https://www.desmos.com/calculator/kv244mputa}{Limits to Growth 2}
 
@@ -84,9 +83,24 @@ For each resource, the authors compute the \emph{exponential index}. This is the
 
 \begin{question}   \label{Q34fratr5}
 Let's work in general (like the authors) and let $r$ be the nominal annual growth rate (compounded continuously) in the global consumption rate and let $s$ be the static index. One of our goals is to express  the exponential index in terms of $r$ and $s$.  
-But more broadly, our aim is to reproduce the graphs in Figure 11 (Chromium Reserves) above. 
+But more broadly, our aim is to reproduce the graphs in Figure 11 (Chromium Reserves) above and reproduced below. 
 
-%The figure shows the graphs of five functions. The first is the constant function $R=R_0$
+
+
+\pdfOnly{
+Access Desmos interactives through the online version of this text at
+ 
+\href{https://www.desmos.com/calculator/kv244mputa}.
+}
+ 
+\begin{onlineOnly}
+    \begin{center}
+\desmos{kv244mputa}{900}{600}
+\end{center}
+\end{onlineOnly}
+
+Access this worksheet at
+
 
 
 We'll let $R_0$ be the 1970 known global reserves (in units of hundreds of millions of tons). Use this parameter along with the parameters $r$ and $s$ as need be, to find expressions for each of the five functions graphed in the figure above:
