--- a/ThirdActivity/ThirdActivity.tex
+++ b/ThirdActivity/ThirdActivity.tex
@@ -48,7 +48,7 @@ Access Desmos interactives through the online version of this text at
 \end{onlineOnly}
 
 
-The focus of this note, however, is about their analysis of the depletion of the world's chromium reserves as illustrated in the figure below. %This model might be turned into a meaningful project for a Math 152 class.
+The focus of this activity, however, is about their analysis of the depletion of the world's chromium reserves as illustrated in the figure below. %This model might be turned into a meaningful project for a Math 152 class.
 
 \pdfOnly{
 Access Desmos interactives through the online version of this text at
@@ -64,7 +64,6 @@ Access Desmos interactives through the online version of this text at
 
 
 
-\href{https://www.desmos.com/calculator/kv244mputa}{Limits to Growth 2}
 
 \pskip \pskip
 
@@ -101,7 +100,9 @@ Access Desmos interactives through the online version of this text at
 
 Access this worksheet at
 
+\href{https://www.desmos.com/calculator/kv244mputa}{Limits to Growth 2}
 
+\pskip \pskip
 
 We'll let $R_0$ be the 1970 known global reserves (in units of hundreds of millions of tons). Use this parameter along with the parameters $r$ and $s$ as need be, to find expressions for each of the five functions graphed in the figure above:
 
@@ -127,14 +128,17 @@ The graph of this function does not really belong on the same coordinate system 
 \[
     R = g(t) , 0\leq t \leq 240,
 \]
-that expresses the remaining global reserves (in hundreds of millions of tons) in terms of the number of years since 1970, assuming an exponentially increasing usage rate of $r \text{ yr}^{-1}$, compounded continuously.
+that expresses the remaining global reserves (in hundreds of millions of tons) in terms of the number of years since 1970, assuming a usage rate that increases exponentially at the nominal rate of $r \text{ yr}^{-1}$, compounded continuously.
 
 (e) The remaining reserves function
 \[
     R = h(t) , 0\leq t \leq 240,
 \]
-that expresses the remaining global reserves (in hundreds of millions of tons) in terms of the number of years since 1970, assuming an exponentially increasing usage rate of $r \text{ yr}^{-1}$, compounded continuously and an initial reserve equal to five times the 1970 reserve.
+that expresses the remaining global reserves (in hundreds of millions of tons) in terms of the number of years since 1970, assuming a usage rate that increases exponentially at the nominal rate of $r \text{ yr}^{-1}$, compounded continuously, and an initial reserve equal to five times the 1970 reserve.
 
+\end{question}
+
+\end{document}
 
 
 
