--- a/ThirdActivity/ThirdActivity.tex
+++ b/ThirdActivity/ThirdActivity.tex
@@ -89,18 +89,18 @@ But more broadly, our aim is to reproduce the graphs in Figure 11 (Chromium Rese
 \pdfOnly{
 Access Desmos interactives through the online version of this text at
  
-\href{https://www.desmos.com/calculator/kv244mputa}.
+\href{https://www.desmos.com/calculator/er2jq9vzeq}.
 }
  
 \begin{onlineOnly}
     \begin{center}
-\desmos{kv244mputa}{900}{600}
+\desmos{er2jq9vzeq}{900}{600}
 \end{center}
 \end{onlineOnly}
 
 Access this worksheet at
 
-\href{https://www.desmos.com/calculator/kv244mputa}{Limits to Growth 2}
+\href{https://www.desmos.com/calculator/er2jq9vzeq}{Limits to Growth 2}
 
 \pskip \pskip
 
@@ -108,15 +108,15 @@ We'll let $R_0$ be the 1970 known global reserves (in units of hundreds of milli
 
 \pskip 
 
-(a) The function 
+(a) the function 
 \[
    R = L(t), 0\leq t \leq 240,
 \]
 that expresses the remaining global reserves (in hundreds of millions of tons) in terms of the number of years since 1970, assuming a constant usage rate equal to the 1970 rate.
 
-(b) The constant function $R=R_0$.
+(b) the constant function $R=R_0$.
 
-(c) The usage rate function 
+(c) the usage rate function 
 \[
      u = f(t) , 0\leq t \leq 240,
 \]
@@ -124,17 +124,33 @@ that expresses the usage rate (measured in $10^8$ tons/year) in terms of the num
 
 The graph of this function does not really belong on the same coordinate system as the others. Why not?
 
-(d) The remaining reserves function
+(d) the remaining reserves function
 \[
     R = g(t) , 0\leq t \leq 240,
 \]
 that expresses the remaining global reserves (in hundreds of millions of tons) in terms of the number of years since 1970, assuming a usage rate that increases exponentially at the nominal rate of $r \text{ yr}^{-1}$, compounded continuously.
 
-(e) The remaining reserves function
+(e) the remaining reserves function
 \[
     R = h(t) , 0\leq t \leq 240,
 \]
 that expresses the remaining global reserves (in hundreds of millions of tons) in terms of the number of years since 1970, assuming a usage rate that increases exponentially at the nominal rate of $r \text{ yr}^{-1}$, compounded continuously, and an initial reserve equal to five times the 1970 reserve.
+
+\pskip \pskip
+
+Next, find expressions (in terms of $R_0$, $r$, and $s$ as need be - do not use specific numbers) for the coordinates of the following points and explain the significance of each (if possible):
+
+(a) the point where the curve $R=g(t)$ intersects the $t$-axis.
+
+(b) the point where the curve $R=h(t)$ interesects the $t$-axis.
+
+(c) the point where the curve $u=f(t)$ intersects the line $R=R_0$.
+
+(d) the point where the curves $u=f(t)$ and $R=g(t)$ intersect.
+
+\pskip \pskip
+
+Finally, drag the slider $u$ and observe that some points appear to collide. Do they actually collide? Can you find any significance to the apparent collision times?
 
 \end{question}
 
