--- a/ThirdActivity/ThirdActivity.tex
+++ b/ThirdActivity/ThirdActivity.tex
@@ -14,7 +14,9 @@ Depletion of the world's resources.
 %\includegraphics[width=\textwidth]{Graph1.png}  
 %\end{image}
 
-\emph{The Project on the Predicament of Mankind} was initiated in 1968 by a group of 30 individuals having a wide range of expertise with the intent of examining the complex problems troubling all nations at that time and that still persist today. Within a year thay had created a model of the five basic factors they identified as limiting growth  - population, agricultural production, natural resources, industrial production, and polution. While perhaps simple by today's standards, the model nevertheless provided valuable insights into how these areas interact with each other to limit growth. The findings are summarized in the 1972 classic \emph{The Limits to Growth}. 
+\emph{The Project on the Predicament of Mankind} was initiated in 1968 by a group of 30 individuals having a wide range of expertise with the intent of examining the complex problems troubling all nations at that time and that still persist today. Within a year thay had created a model of the five basic factors they identified as limiting growth  - population, agricultural production, natural resources, industrial production, and polution. While perhaps simple by today's standards, the model nevertheless provided valuable insights into how these areas interact with each other to limit growth. The findings are summarized in the 1972 classic \emph{The Limits to Growth}, available at
+
+\href{https://www.library.dartmouth.edu/digital/digital-collections/limits-growth}{Limits to Growth} .
 
 
 \pskip
