--- a/FoldedPaper/FoldedPaper.tex
+++ b/FoldedPaper/FoldedPaper.tex
@@ -10,7 +10,18 @@ From Math Horizons.
 \maketitle
 
 
-Nothign yhet
+\pdfOnly{
+Access Desmos interactives through the online version of this text at
+ 
+\href{https://www.desmos.com/calculator/nc29qvai2m}.
+}
+ 
+\begin{onlineOnly}
+    \begin{center}
+\desmos{nc29qvai2m}{900}{600}
+\end{center}
+\end{onlineOnly}
+
 
 
 \end{document}
