--- a/FoldedPaper/FoldedPaper.tex
+++ b/FoldedPaper/FoldedPaper.tex
@@ -24,4 +24,24 @@ Access Desmos interactives through the online version of this text at
 
 
 
+
+
+\section*{Cube and Sphere}
+
+
+pdfOnly{
+Access Desmos interactives through the online version of this text at
+ 
+\href{https://www.desmos.com/calculator/b93e16cb9a}.
+}
+ 
+\begin{onlineOnly}
+    \begin{center}
+\desmos{b93e16cb9a}{900}{600}
+\end{center}
+\end{onlineOnly}
+
+Activity available at  \href{https://www.desmos.com/calculator/b93e16cb9a}{Folded Paper Illusions 2}
+
+
 \end{document}
