--- a/FoldedPaper/FoldedPaper.tex
+++ b/FoldedPaper/FoldedPaper.tex
@@ -29,7 +29,7 @@ Access Desmos interactives through the online version of this text at
 \section*{Cube and Sphere}
 
 
-pdfOnly{
+\pdfOnly{
 Access Desmos interactives through the online version of this text at
  
 \href{https://www.desmos.com/calculator/829edf2d9b}.
