--- a/FoldedPaper/FoldedPaper.tex
+++ b/FoldedPaper/FoldedPaper.tex
@@ -32,11 +32,11 @@ Access Desmos interactives through the online version of this text at
 \pdfOnly{
 Access Desmos interactives through the online version of this text at
  
-\href{https://www.desmos.com/calculator/829edf2d9b}.
+\href{https://www.desmos.com/3d/d13868b44e}.
 }
  
 
-Activity available at  \href{https://www.desmos.com/calculator/829edf2d9b}{Folded Paper Illusions 2}
+Activity available at  \href{https://www.desmos.com/3d/d13868b44eb}{Folded Paper Illusions 2}
 
 
 \end{document}
