--- a/FoldedPaper/FoldedPaper.tex
+++ b/FoldedPaper/FoldedPaper.tex
@@ -36,7 +36,7 @@ Access Desmos interactives through the online version of this text at
 }
  
 
-Activity available at  \href{https://www.desmos.com/3d/d13868b44eb}{Folded Paper Illusions 2}
+Activity available at  \href{https://www.desmos.com/3d/a562c21711}{163: Folded Paper Illusions 2}
 
 
 \end{document}
