--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -18,6 +18,6 @@ started with Ximera for course instructors.
 \activity{TangentSpheres/TangentSpheres}
 \activity{PowerSeries/PowerSeries}
 \activity{InscribedSpheres/InscribedSpheres}
-\activity{FoldedPaper/FoldedPaper}
+%\activity{FoldedPaper/FoldedPaper}
  
 \end{document}
