--- a/FoldedPaper/FoldedPaper.tex
+++ b/FoldedPaper/FoldedPaper.tex
@@ -29,11 +29,12 @@ Access Desmos interactives through the online version of this text at
 \section*{Cube and Sphere}
 
 
-\pdfOnly{
-Access Desmos interactives through the online version of this text at
- 
-\href{https://www.desmos.com/3d/d13868b44e}.
-}
+\begin{onlineOnly}
+    \begin{center}
+\desmos{a562c21711}{900}{600}
+\end{center}
+\end{onlineOnly}
+
  
 
 Activity available at  \href{https://www.desmos.com/3d/a562c21711}{163: Folded Paper Illusions 2}
